# assignment_clustering

./: README.md  pyproject.toml
assignment_clustering/: README.md  main.py  task.py
assignment_clustering/model/: kmmodel.pkl
assignment_clustering/scripts/: generate_dummy_data.py
tests/: test_garbage.py
